[package]
name = "rsdsl_netlinkd"
version = "0.10.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.8.0"
netlink-packet-core = "0.7.0"
netlink-packet-netfilter = "0.2.0"
netlink-packet-utils = "0.5.2"
netlink-sys = { version = "0.8.5", features = ["tokio", "tokio_socket"] }
rsdsl_ip_config = { git = "https://github.com/rsdsl/ip_config.git", version = "0.3.0" }
rsdsl_netlinklib = { git = "https://github.com/rsdsl/netlinklib.git", features = ["blocking"] }
rsdsl_pd_config = { git = "https://github.com/rsdsl/pd_config.git", version = "0.1.0" }
serde_json = "1.0"
signal-hook = "0.3.17"
sysinfo = { version = "0.29.10", default-features = false }
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
